--- a/Email-Spam-Detection/Email-Spam-Detection-KNN.ipynb
+++ b/Email-Spam-Detection/Email-Spam-Detection-KNN.ipynb
@@ -6,6 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Produced by: Kirubel Temesgen\n",
+    "# College ID: C00260396\n",
+    "# Description: Machine Learning Algorithm Overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "# Load dataset\n",
