--- a/Email-Spam-Detection/Email-Spam-Detection-KmeansClustering.ipynb
+++ b/Email-Spam-Detection/Email-Spam-Detection-KmeansClustering.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Produced by: Kirubel Temesgen\n",
+    "# College ID: C00260396\n",
+    "# Description: Machine Learning Algorithm Overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
